# dbt-snowflake-cortex

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: generate-docs.yml  lint.yml  run-dbt-app.yml  streamlit-snowflake.yml
SiS/: README.md
SiS/app/: app.py  environment.yml  snowflake.yml
SiS/app/environment/: environment.py
SiS/app/models/: snowflake.py
SiS/app/snowflake_helpers/: api.py  local_connection.py
SiS/semantic_models/: dbt_app.yml  semantic_rpt_customer_informations.yml  semantic_rpt_tag_campaigns_sends.yml
SiS/test_app/: app.py  snowflake.yml
dbt_app/: dbt_project.yml  package-lock.yml
dbt_app/models/: source.yml
dbt_app/models/mart/: brg_tags_to_campaigns.sql  brg_tags_to_campaigns.yml  dim_campaigns.sql  dim_campaigns.yml  dim_customers.sql  dim_customers.yml  dim_tags.sql  dim_tags.yml  fct_sales.sql  fct_sales.yml  fct_sendings.sql  fct_sendings.yml  rpt_customer_informations.sql  rpt_customer_informations.yml  rpt_tag_campaigns_sends.sql  (+1 more)
docs/: README.md  index.html
img/: project_setup_diagram.png.excalidraw
loader/: README.md  constants.py  generator.py  loader.py  requirements.txt
snowflake_setup/: create_app_user.sql  create_database.sql  create_raw_campaigns.sql  create_raw_customers.sql  create_raw_sales.sql  create_raw_sends.sql  create_schemas.sql  create_sematic_model_database.sql  create_sematic_model_stage.sql  enable_cortex_analyst.sql  enable_cross_region_inference.sql
streamlit_app/: app.py
streamlit_app/semantic_models/: dbt_app.yml
(+2 files in other folders)
