[project]
name = "dbt_snowflake_cortex"
version = "0.1.0"
description = "demo of cortex analyst with a dbt project"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Guillaume Gsicara", email = "gguillaume.gonde@gmail.com"}
]

[project.urls]
Documentation = "https://guillaumegsicara.github.io/dbt-snowflake-cortex/#!/overview"

[tool.mypy]
python_version = "3.11"

[tool.ruff]
line-length = 88